--- a/EmbarkToTalk/src/app/app.component.html
+++ b/EmbarkToTalk/src/app/app.component.html
@@ -1,3 +1,3 @@
-<ion-app>
-  <ion-router-outlet class="bg-style container container--home"></ion-router-outlet>
+<ion-app class="bg-style2">
+  <ion-router-outlet class="bg-style2 container"></ion-router-outlet>
 </ion-app>
